--- a/test-app/Xliff-test/Translations/Al.g.xlf
+++ b/test-app/Xliff-test/Translations/Al.g.xlf
@@ -33,6 +33,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table NAB Test Table - Field MyField - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 596208023 - Field 3945078064 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>MyField2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table NAB Test Table - Field MyField2 - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 596208023 - Field 440443472 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Field</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -173,6 +178,111 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test Table - Action ActionName - Method OnAction - NamedType LocalTestLabelTxt</note>
         </trans-unit>
+        <trans-unit id="Page 1798807378 - Property 1968111052" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Instructions</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Property InstructionalText</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Property 2019332006" size-unit="char" translate="yes" xml:space="preserve">
+          <source>asdf,erewf</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Property PromotedActionCategories</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Page Caption</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - NamedType 2688233357" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Global Test Label</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - NamedType GlobalTestLabelTxt</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Method 1306612702 - NamedType 1061650423" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Local Test Label</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Method TestMethodPage - NamedType LocalTestLabelTxt</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 4105281732 - Property 1968111052" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Instruction</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control GroupName - Property InstructionalText</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 4105281732 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Grp</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control GroupName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 1296262074 - Property 1064389655" size-unit="char" translate="yes" xml:space="preserve">
+          <source>MyChanged AboutTitle</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control MyField - Property AboutTitle</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 1296262074 - Property 247559172" size-unit="char" translate="yes" xml:space="preserve">
+          <source>MyChanged AboutText</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control MyField - Property AboutText</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 1296262074 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source></source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control MyField - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 2961552353 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Tooltup 3</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control Name - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 2961552353 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Field</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control Name - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 2961552353 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve">
+          <source>asdf,sadf,____ASADF</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control Name - Property OptionCaption</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Control 2961552353 - Method 2699620902 - NamedType 1061650423" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Local Test Label</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Control Name - Method OnAssistEdit - NamedType LocalTestLabelTxt</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Action 3862845261 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>AreaTooltip</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Action Processing - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Action 1692444235 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Tooltip 4</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Action ActionName - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Action 1692444235 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Action</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Action ActionName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Action 1692444235 - Method 1377591017 - NamedType 1061650423" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Local Test Label</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Action ActionName - Method OnAction - NamedType LocalTestLabelTxt</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - View 3072246430 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>ViewCaption</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - View ViewName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Change 1296262074 - Property 1064389655" size-unit="char" translate="yes" xml:space="preserve">
+          <source>MyChanged AboutTitle</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Change MyField - Property AboutTitle</note>
+        </trans-unit>
+        <trans-unit id="Page 1798807378 - Change 1296262074 - Property 247559172" size-unit="char" translate="yes" xml:space="preserve">
+          <source>MyChanged AboutText</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB Test View - Change MyField - Property AboutText</note>
+        </trans-unit>
         <trans-unit id="Page 883204498 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>NAB ToolTip Part 1</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -287,11 +397,6 @@
           <source>sdfa</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report NAB Test Report - ReportDataItem DataItemName - Property RequestFilterHeading</note>
-        </trans-unit>
-        <trans-unit id="Report 529985455 - ReportColumn 967337907 - Property 2879900210" maxwidth="50" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Column</source>
-          <note from="Developer" annotates="general" priority="2">ColumnComment</note>
-          <note from="Xliff Generator" annotates="general" priority="3">Report NAB Test Report - ReportColumn ColumnName - Property Caption</note>
         </trans-unit>
         <trans-unit id="Report 529985455 - ReportColumn 967337907 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve">
           <source>asd,asdf</source>
@@ -443,11 +548,6 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - Change Application Method - Property Caption</note>
         </trans-unit>
-        <trans-unit id="PageExtension 3795862579 - Change 2039693239 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
-          <source>dfee</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - Change Application Method - Property OptionCaption</note>
-        </trans-unit>
         <trans-unit id="PageExtension 3795862579 - Control 3146432722 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
           <source>Tooltip 1</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -462,6 +562,36 @@
           <source>asdf,ef</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - Control NAB Blocked3 - Property OptionCaption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3795862579 - View 2676260642 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
+          <source>MyViewCaption</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - View MyViewName - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3795862579 - Change 3246865201 - Property 1064389655" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
+          <source>Modified AboutTitle1</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - Change Credit Limit (LCY) - Property AboutTitle</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3795862579 - Change 3246865201 - Property 247559172" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
+          <source>Modified AboutText1</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - Change Credit Limit (LCY) - Property AboutText</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3795862579 - View 369637368 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
+          <source>MyViewCaption</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - View MyViewName2 - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3795862579 - Change 2039693239 - Property 1064389655" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
+          <source>Modified AboutTitle2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - Change Application Method - Property AboutTitle</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3795862579 - Change 2039693239 - Property 247559172" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 2901867346">
+          <source>Modified AboutText2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension NAB Test PageExt - Change Application Method - Property AboutText</note>
         </trans-unit>
         <trans-unit id="TableExtension 3999646232 - NamedType 1399329827" size-unit="char" translate="yes" xml:space="preserve" al-object-target="TableExtension 3999646232">
           <source>TableExt Label</source>
@@ -498,11 +628,6 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension NAB Test Table Ext - Change Application Method - Property Caption</note>
         </trans-unit>
-        <trans-unit id="TableExtension 3999646232 - Change 2039693239 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1994964448">
-          <source>asdf,adfe</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension NAB Test Table Ext - Change Application Method - Property OptionCaption</note>
-        </trans-unit>
         <trans-unit id="TableExtension 2794708188 - Field 157186525 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Field 1</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -532,16 +657,6 @@
           <source>Enum1</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Enum NAB TestEnum - EnumValue MyValue - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="ReportExtension 1459638086 - ReportColumn 3168444338 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Report 919756715">
-          <source>Test 1</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">ReportExtension NAB Test Report Ext. - ReportColumn Address - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="ReportExtension 1459638086 - ReportColumn 179365352 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Report 919756715">
-          <source>Test 2</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">ReportExtension NAB Test Report Ext. - ReportColumn Address2 - Property Caption</note>
         </trans-unit>
       </group>
     </body>
