--- a/test-app/Xliff-test/Translations/Al.g.xlf
+++ b/test-app/Xliff-test/Translations/Al.g.xlf
@@ -423,6 +423,36 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page NAB ToolTips - Control SystemId - Property ToolTip</note>
         </trans-unit>
+        <trans-unit id="Page 490015697 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Page With Grid</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB With Grid - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 490015697 - Control 739346273 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Lines</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB With Grid - Control Group - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 490015697 - Control 1878130204 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Type</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB With Grid - Control Type - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 490015697 - Control 828292189 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Option</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB With Grid - Control Option - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 490015697 - Control 1553686271 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Specifies the bla bla bla.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB With Grid - Control ItemFilter - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="Page 490015697 - Control 1553686271 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Item Filter</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page NAB With Grid - Control ItemFilter - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Page 3129687166 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>My Customer API</source>
           <note from="Developer" annotates="general" priority="2"></note>
